# coco-eval

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  TEST_COVERAGE.md  TODO.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml  docs.yml
benches/: metrics_benchmark.rs
docs/: index.md
docs/development/: contributing.md  performance.md  testing.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: api.md  examples.md  overview.md
docs/reference/: porting.md  python.md
examples/: basic_evaluation.rs  threshold_optimization.rs
python/coco_eval/: __init__.py  __init__.pyi
references/: README.md
references/docs/: README.md  pyproject.toml
references/examples/: ml_deployment_infer_on_val.py  offline_inference_metrics.py
references/python/: __init__.py  conversions.py  db.py  eval_metrics.py  test_conversions.py  test_db.py  test_eval_metrics.py  test_eval_metrics_additional.py
src/: error.rs  evaluator.rs  lib.rs  loader.rs  matching.rs  nms.rs  polars_utils.rs  stats.rs  threshold.rs  types.rs
src/metrics/: ap.rs  f1_score.rs  fbeta.rs  iou.rs  mod.rs  precision_recall.rs
tests/: edge_cases_test.rs  error_handling_test.rs  fbeta_edge_cases.rs  integration_test.rs  loader_types_tests.rs  property_tests.rs  stress_test.rs
