[project]
name = "evaluation"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = "==3.12.11"
dependencies = [
    "numpy==2.2.6",
    "polars==1.2.0",
    "matplotlib==3.9.2",
    "scikit-learn==1.7.1",
    "supervision==0.26.1",
    "loguru==0.7.3",
    "psycopg[binary,pool]==3.2.10",
]


[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest==8.3.3",
]
